@@ -3,7 +3,6 @@ package de.niclasl.multiPlugin.mob_system.gui;
 import de.niclasl.multiPlugin.mob_system.manager.MobManager;
 import de.niclasl.multiPlugin.mob_system.model.MobSpawnRequest;
 import org.bukkit.Bukkit;
-import org.bukkit.ChatColor;
 import org.bukkit.Material;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.entity.EntityType;
@@ -20,6 +19,11 @@ import java.util.stream.Collectors;
 
 public class MobGui {
 
+    public static final Character[] ALPHABET = "ABCDEFGHIJKLMNOPQRSTUVWXYZ".chars()
+            .mapToObj(c -> (char) c)
+            .toArray(Character[]::new);
+
+    public static HashMap<UUID, Integer> playerFilterIndex = new HashMap<>();
     public static MultiPlugin plugin;
 
     public MobGui(MultiPlugin plugin) {
@@ -27,10 +31,23 @@ public class MobGui {
     }
 
     public static void open(Player viewer, OfflinePlayer target, int page) {
+
+        // Filter laden
+        int filterIndex = playerFilterIndex.getOrDefault(viewer.getUniqueId(), -1);
+        Character filterChar = (filterIndex == -1 ? null : ALPHABET[filterIndex]);
+
+        // Requests holen
         List<MobSpawnRequest> requests = MobManager.getRequests(target.getUniqueId());
         List<EntityType> allMobs = requests.stream()
                 .map(MobSpawnRequest::getEntityType)
-                .toList();
+                .collect(Collectors.toList());
+
+        // Filter anwenden
+        if (filterChar != null) {
+            allMobs = allMobs.stream()
+                    .filter(type -> type.name().startsWith(filterChar.toString()))
+                    .toList();
+        }
 
         int[] allowedSlots = {
                 0,1,2,3,4,5,6,7,
@@ -46,27 +63,15 @@ public class MobGui {
         if (totalPages == 0) totalPages = 1;
         page = Math.min(Math.max(page, 1), totalPages);
 
-        Inventory inv = Bukkit.createInventory(null, 54, "§8Spawn Mobs for " + target.getName() + " §7(" + page + "/" + totalPages + ")");
+        Inventory inv = Bukkit.createInventory(
+                null,
+                54,
+                "§8Spawn Mobs for " + target.getName() + " §7(" + page + "/" + totalPages + ")"
+        );
 
         // Rand
         ItemStack glass = createItem(Material.GRAY_STAINED_GLASS_PANE, " ");
-        for (int i : new int[]{8,17}) {
-            inv.setItem(i, glass);
-        }
-
-        if (totalPages == 1 || page == 1) {
-            ItemStack glass1 = createItem(Material.GRAY_STAINED_GLASS_PANE, " ");
-            for (int i : new int[]{35}) {
-                inv.setItem(i, glass1);
-            }
-        }
-
-        if (totalPages == 1 || totalPages == page) {
-            ItemStack glass2 = createItem(Material.GRAY_STAINED_GLASS_PANE, " ");
-            for (int i : new int[]{44}) {
-                inv.setItem(i, glass2);
-            }
-        }
+        inv.setItem(8, glass);
 
         int startIndex = (page - 1) * mobsPerPage;
 
@@ -76,83 +81,68 @@ public class MobGui {
 
             int slot = allowedSlots[i];
             EntityType type = allMobs.get(index);
-            String displayName = Arrays.stream(type.name().split("_"))
-                    .map(word -> word.charAt(0) + word.substring(1).toLowerCase())
-                    .collect(Collectors.joining(" "));
-            Material eggMat = Material.matchMaterial(type.name() + "_SPAWN_EGG");
 
-            ItemStack item;
-            if (eggMat != null) {
-                item = new ItemStack(eggMat);
-                ItemMeta meta = item.getItemMeta();
-                if (meta != null) {
-                    meta.setDisplayName("§a" + displayName);
-                    meta.setLore(List.of("§7Left-click to spawn", "§eRight-click: Enter number"));
-                    item.setItemMeta(meta);
-                }
-            } else {
-                item = new ItemStack(Material.EGG);
-                ItemMeta meta = item.getItemMeta();
-                if (meta != null) {
-                    meta.setDisplayName("§c" + displayName);
-                    meta.setLore(List.of("§7Left-click to spawn", "§eRight-click: Enter number", "§7No spawn egg available"));
-                    item.setItemMeta(meta);
-                }
-            }
+            String displayName = Arrays.stream(type.name().split("_"))
+                    .map(w -> w.charAt(0) + w.substring(1).toLowerCase())
+                    .collect(Collectors.joining(" "));
+
+            Material egg = Material.matchMaterial(type.name() + "_SPAWN_EGG");
+            ItemStack item = new ItemStack(egg != null ? egg : Material.EGG);
+
+            ItemMeta meta = item.getItemMeta();
+            assert meta != null;
+            meta.setDisplayName("§a" + displayName);
+            meta.setLore(List.of(
+                    "§7Left-click to spawn",
+                    "§eRight-click: Enter number"
+            ));
+            item.setItemMeta(meta);
 
             inv.setItem(slot, item);
         }
 
-        // Kopf-Icon
+        // Kopf
         ItemStack skull = new ItemStack(Material.PLAYER_HEAD);
         SkullMeta meta = (SkullMeta) skull.getItemMeta();
         assert meta != null;
         meta.setOwningPlayer(target);
         meta.setDisplayName("§e" + target.getName());
-        meta.setLore(List.of(ChatColor.AQUA + "Total Mobs: " + requests.size()));
+        meta.setLore(List.of("§bTotal: " + requests.size()));
         skull.setItemMeta(meta);
-
         inv.setItem(53, skull);
 
-        // Zurück-Button
-        ItemStack back = new ItemStack(Material.BARRIER);
-        ItemMeta backMeta = back.getItemMeta();
-        assert backMeta != null;
-        backMeta.setDisplayName("§cBack");
-        back.setItemMeta(backMeta);
-        inv.setItem(26, back);
+        // Back
+        inv.setItem(26, createItem(Material.BARRIER, "§cBack"));
 
-        // Navigation
-        if (page > 1) {
-            ItemStack backArrow = new ItemStack(Material.ARROW);
-            ItemMeta backArrowMeta = backArrow.getItemMeta();
-            assert backArrowMeta != null;
-            backArrowMeta.setDisplayName("§aPrevious page");
-            backArrow.setItemMeta(backArrowMeta);
-            inv.setItem(35, backArrow);
-        }
+        // Page Controls
+        if (page > 1)
+            inv.setItem(35, createItem(Material.ARROW, "§aPrevious Page"));
 
-        if (page < totalPages) {
-            ItemStack nextArrow = new ItemStack(Material.ARROW);
-            ItemMeta nextMeta = nextArrow.getItemMeta();
-            assert nextMeta != null;
-            nextMeta.setDisplayName("§aNext page");
-            nextArrow.setItemMeta(nextMeta);
-            inv.setItem(44, nextArrow);
-        }
+        if (page < totalPages)
+            inv.setItem(44, createItem(Material.ARROW, "§aNext Page"));
 
+        // Filter-Buch
+        String filterName = (filterChar == null ? "ALL" : filterChar.toString());
+        inv.setItem(17, createItem(
+                Material.BOOK,
+                "§eFilter: §6" + filterName,
+                "§7Left: Next letter",
+                "§7Right: Previous letter"
+        ));
+
+        // Metadata setzen
         viewer.openInventory(inv);
         viewer.setMetadata("mob_target", new FixedMetadataValue(plugin, target.getUniqueId().toString()));
         viewer.setMetadata("mob_page", new FixedMetadataValue(plugin, page));
     }
 
-    private static ItemStack createItem(Material material, String name, String... lore) {
-        ItemStack item = new ItemStack(material);
-        ItemMeta meta = item.getItemMeta();
-        assert meta != null;
-        meta.setDisplayName(name);
-        meta.setLore(Arrays.asList(lore));
-        item.setItemMeta(meta);
+    private static ItemStack createItem(Material mat, String name, String... lore) {
+        ItemStack item = new ItemStack(mat);
+        ItemMeta m = item.getItemMeta();
+        assert m != null;
+        m.setDisplayName(name);
+        if (lore.length > 0) m.setLore(List.of(lore));
+        item.setItemMeta(m);
         return item;
     }
 }
